--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "Pawel Rubach – Researcher & IT Architect"
-email: "your.email@domain"
+email: "pawel.rubach [at] sgh.waw.pl"
 description: "Assistant Professor, distributed computing, optimization, IT architect"
 baseurl: ""        # because we’ll host at root (or change if hosting in subpath)
 url: "https://your-domain.com"   # replace with your domain (or GitHub pages URL)
