--- a/.github/workflows/orcid_update.yml
+++ b/.github/workflows/orcid_update.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   update-publications:
     runs-on: ubuntu-latest
+    permissions:
+      # Give the default GITHUB_TOKEN write permission to commit and push the changed files back to the repository.
+      contents: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -24,11 +27,6 @@ jobs:
         run: python fetch_full_orcid.py
 
       - name: Commit and push results
-        run: |
-          git config --global user.email "pawel.rubach@github.action"
-          git config --global user.name "Pawel Rubach"
-          git add _data/publications.yaml
-          git add _data/publications.json
-          git add assets/data/pawelrubach.bib
-          git commit -m "Auto-update ORCID publications"
-          git push
+      - uses: stefanzweifel/git-auto-commit-action@v7
+        with:
+          commit_message: Update publications from ORCID
