--- a/.github/workflows/orcid_update.yml
+++ b/.github/workflows/orcid_update.yml
@@ -27,7 +27,7 @@ jobs:
         run: python fetch_full_orcid.py
 
       - name: Commit and push results
-      - uses: stefanzweifel/git-auto-commit-action@v7
+        uses: stefanzweifel/git-auto-commit-action@v7
         with:
           commit_message: Update publications from ORCID
           commit_user_name: GitHub Actions
